# geany-plugins

./: .travis.yml  MAINTAINERS  Makefile.am  NEWS  README  configure.ac
eslint/: .gitignore  AUTHORS  Makefile.am  README  TODO
eslint/src/: Makefile.am  eslint.resources.xml  eslint.vala  lint.js
eslint/src/vapi/: geany-scintilla-1.0.vapi  geany.deps  geany.vapi
